duniverse/menhirLib.20200211/test/static/bad/token-has-multiple-definition.mly
%token A
%token A
%%

a: {}
