duniverse/menhirLib.20200211/test/static/bad/token-has-multiple-definition.exp
File "token-has-multiple-definition.mly", line 2, characters 7-8:
Error: the token A has multiple definitions.
